# Freenove_RFID_Starter_Kit_for_Raspberry_Pi

Code/Rust_Code/: Cargo.toml  Makefile.toml  README.md  crossShell.nix  flake.nix
Code/Rust_Code/.cargo/: config
Code/Rust_Code/00.0.0_Hello/hello/: Cargo.toml
Code/Rust_Code/01.1.1_Blink/blink/: Cargo.toml
Code/Rust_Code/01.1.1_Blink/blink/src/: main.rs
Code/Rust_Code/02.1.1_ButtonLED/button_led/: Cargo.toml
Code/Rust_Code/02.1.1_ButtonLED/button_led/src/: main.rs
Code/Rust_Code/02.2.1_Tablelamp/table_lamp/: Cargo.toml
Code/Rust_Code/03.1.1_LightWater/light_water/: Cargo.toml
Code/Rust_Code/04.1.1_BreathingLED/breathing_led/: Cargo.toml
Code/Rust_Code/05.1.1_ColorfulLED/colorful_led/: Cargo.toml
Code/Rust_Code/06.1.1_Doorbell/door_bell/: Cargo.toml
Code/Rust_Code/06.2.1_Alertor/alertor/: Cargo.toml
Code/Rust_Code/07.1.1_ADC/adc/: Cargo.toml
Code/Rust_Code/08.1.1_Softlight/soft_light/: Cargo.toml
Code/Rust_Code/09.1.1_ColorfulSoftlight/colorful_soft_light/: Cargo.toml
Code/Rust_Code/10.1.1_Nightlamp/night_lamp/: Cargo.toml
Code/Rust_Code/11.1.1_Thermometer/thermometer/: Cargo.toml
Code/Rust_Code/12.1.1_Joystick/joystick/: Cargo.toml
Code/Rust_Code/13.1.1_Motor/motor/: Cargo.toml
Code/Rust_Code/14.1.1_Relay/relay/: Cargo.toml
Code/Rust_Code/15.1.1_Sweep/sweep/: Cargo.toml
Code/Rust_Code/16.1.1_SteppingMotor/stepping_motor/: Cargo.toml
Code/Rust_Code/17.1.1_LightWater02/light_water_02/: Cargo.toml
Code/Rust_Code/18.1.1_SevenSegmentDisplay/seven_segment_display/: Cargo.toml
Code/Rust_Code/18.2.1_StopWatch/stop_watch/: Cargo.toml
Code/Rust_Code/19.1.1_LEDMatrix/led_matrix/: Cargo.toml
Code/Rust_Code/21.1.1_DHT11/dht11/: Cargo.toml
Code/Rust_Code/22.1.1_MatrixKeypad/matrix_keypad/: Cargo.toml
Code/Rust_Code/23.1.1_UltrasonicRanging/ultrasonic_ranging/: Cargo.toml
(+27 files in other folders)
