[workspace]
members = [
    "00.0.0_Hello/hello",
    "01.1.1_Blink/blink",
    "02.1.1_ButtonLED/button_led",
    "02.2.1_Tablelamp/table_lamp",
    "03.1.1_LightWater/light_water",
    "04.1.1_BreathingLED/breathing_led",
    "05.1.1_ColorfulLED/colorful_led",
    "06.1.1_Doorbell/door_bell",
    "06.2.1_Alertor/alertor",
    "07.1.1_ADC/adc",
    "08.1.1_Softlight/soft_light",
    "09.1.1_ColorfulSoftlight/colorful_soft_light",
    "10.1.1_Nightlamp/night_lamp",
    "11.1.1_Thermometer/thermometer",
    "12.1.1_Joystick/joystick",
    "13.1.1_Motor/motor",
    "14.1.1_Relay/relay",
    "15.1.1_Sweep/sweep",
    "16.1.1_SteppingMotor/stepping_motor",
    "17.1.1_LightWater02/light_water_02",
    "18.1.1_SevenSegmentDisplay/seven_segment_display",
    "18.2.1_StopWatch/stop_watch",
    "19.1.1_LEDMatrix/led_matrix",
    "23.1.1_UltrasonicRanging/ultrasonic_ranging",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
rppal = "0.14.1"
anyhow = "1.0.71"